--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pandas
 numpy
-scikit-learn
-imbalanced-learn
+scikit-learn==1.2.2
+imbalanced-learn==0.10.1
 streamlit
 matplotlib
 seaborn
 joblib
- 
+
